styles/portfolio.css
.open-sans-normal {
  font-family: "Open Sans", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}

/* shared styles */

.secondary-bg{
    background-color: #FFF8F3;
}


.text-primary{
    color: #FD6E0A;
}

.dark-2{
    color: #474747;
}

.btn-primary{
    background-color: #FD6E0A;
    font-weight:bold;
    font-size: 20px;
    color: white;
    padding: 18px 35px;
    border-radius: 5px;
     border: none;
}

.section-title{

    font-size: 35px;
    font-weight: bold;
    color: #181818;
}
.section-description{
    font-size: 18px;
    color:#757575;

}

.text-center{
    text-align: center;
}

/* header */
.header{
    background-image: url(../images/developer.png), url(../images/header_bg.png);
    background-repeat: no-repeat;
    background-position: top left, bottom right;
}

/* Nav styles */

nav{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 50px 200px;
}

.nav-title{
    font-weight: 800; /* bold */
    font-size: 45px;
    
}

nav ul{
    display: flex;
    align-items: center;

    
}

nav ul li{
    list-style: none;
    margin-right: 50px;
}

nav li a{
    text-decoration: none;
    font-size: 20px;

}

/* banner styles */

.banner{
    display: flex;
    justify-content: space-between;
    margin: 0 35px 0 200px;
}

.banner-content{
   max-width: 580px;
}

.banner-greetings{
    font-size: 45px ;
     font-weight: 600;
}

.banner-title{
    font-weight: bold;
    font-size: 85px;

}

.banner-profile-pic{
    width: 580px;
}

/* main styles */

main{

    max-width: 1140px;
    margin: 0 auto;

}

main section{
    margin-top: 130px;
     margin-bottom: 130px;
}

/* about styles */

.inner-block{
    background-color: white;
    border-style: solid;
    
}

.about{
    border-radius: 10px;
    padding: 131px 156px;
    text-align: center;
   
}
.about-items{
    display: flex;
    justify-content: space-between;
}

.item-description{
    font-weight: 600;
}

/* skills section styles */
.my-skills{
        text-align: center;
}
.skills-container{
    display: flex;
    gap: 24px;


}

.skill{
        padding:30px;
        border-radius: 5px;
       box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
        text-align: left;
        
}

.skill-description{
    color: #757575;
}

/* resume section styles */
.resume-container{
    display: flex;
    gap: 24px;
}

.experience-subtitle{
    font-size: 20px;
    font-weight: 600;
    margin-bottom: 20px;
}

.experience-description, .experience-subtitle{
    color:#757575;
}

.resume hr{
    margin: 30px 5px;
}

.resume-download-cv{
    margin-top: 50px;
}

/* footer styles */

footer{
    padding: 130px 230px;
     display: flex;
     gap 100px;
}

.footer-column{
     width: 50%;
}


footer input[type="text"], footer input[type="email"], footer textarea{
    height: 64px;
    border-radius: 5px;
    background-color: white;
    display: block;
    width: 100%;
    padding: 10px 20px;
    margin-bottom: 24px;
    border: none;


}

